fix: adjust display properties for responsive navbar and footer on small screens

--- a/assets/css/_header-footer.scss
+++ b/assets/css/_header-footer.scss
@@ -184,6 +184,10 @@ footer {
   left: 0;
   right: 0;
   z-index: 999;
+  display: none;
+  @media screen and (max-width: 576px) {
+    display: block;
+  }
   ul {
     @include space-between();
     li {
